--- a/components/styles/_banner.scss
+++ b/components/styles/_banner.scss
@@ -64,14 +64,14 @@
 	}
 	&__heading {
 		color: $brand-color-1;
-		font-size: 38px;
+		// font-size: 38px;
 		word-break: break-word;
 		@include bp-md {
-			font-size: 64px;
+			// font-size: 64px;
 			line-height: 1;
 		}
 		@include bp-xxl {
-			font-size: 94px;
+			// font-size: 94px;
 		}
 	}
 	&__text {
